--- a/ZPOnode/public/html/backstage.html
+++ b/ZPOnode/public/html/backstage.html
@@ -4,7 +4,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <title>ZPOnode后台系统</title>
-  <link rel="stylesheet" href="./lib/layui/css/layui.css">
+  <link rel="stylesheet" href="../lib/layui/css/layui.css">
+  <link rel="stylesheet" href="../stylesheets/backstage.css">
 </head>
 <body class="layui-layout-body">
 <div class="layui-layout layui-layout-admin">
@@ -62,13 +63,79 @@
         </li>
         <li class="layui-nav-item"><a href="">云市场</a></li>
         <li class="layui-nav-item"><a href="">发布商品</a></li>
+
+        <!-- 管理员列表 -->
+        <li class="layui-nav-item" id="amdin">
+          <a href="javascript:;">管理员列表</a>
+          <dl class="layui-nav-child admin">
+            <dd><a href="javaScript:;">用户管理</a></dd>
+            <dd class="inset"><a href="javaScript:;">添加管理员</a></dd>
+          </dl>
+        </li>
       </ul>
     </div>
   </div>
   
   <div class="layui-body">
     <!-- 内容主体区域 -->
-    <div style="padding: 15px;">内容主体区域</div>
+    <div style="padding: 15px;">
+    <div class="layui-row">
+      <div class="layui-col-md12 main" style="display:none">
+        <table class="layui-table">
+          <colgroup>
+            <col width="150">
+            <col width="200">
+            <col>
+          </colgroup>
+          <thead>
+            <tr>
+              <th>id</th>
+              <th>用户名</th>
+              <th>密码</th>
+              <th>操作</th>
+            </tr> 
+          </thead>
+          <tbody id="body" >
+            <!-- <tr>
+              <td>贤心</td>
+              <td>2016-11-29</td>
+              <td>213</td>
+              <td>
+                <a href="javaScript:;">删除</a>
+              </td>
+            </tr>
+            <tr>
+              <td>许闲心</td>
+              <td>2016-11-28</td>
+              <td>123</td>
+              <td><a href="javaScript:;">删除</a></td>
+            </tr> -->
+          </tbody>
+        </table>
+      </div>
+      <div class="layui-col-md8 main" style="display:none" >
+        <h2 class="title">添加管理员</h2>
+        <!-- 用户名 -->
+        <div class="layui-form-item layui-col-md-offset4">
+          <label class="layui-form-label">用户名</label>
+          <div class="layui-input-inline line">
+            <input type="text" name="title" required  lay-verify="required" placeholder="请输入用户名" autocomplete="off" class="layui-input" id="user">
+          </div>
+        </div>
+        <!-- 密码 -->
+        <div class="layui-form-item layui-col-md-offset4">
+          <label class="layui-form-label">密码</label>
+          <div class="layui-input-inline line">
+            <input type="password" name="password" required lay-verify="required" placeholder="请输入密码" autocomplete="off" class="layui-input" id="psww">
+          </div>
+        
+        </div>
+        <div class="layui-col-md2 bttn layui-col-md-offset11" id="bttn">添加</div>
+   
+      </div>
+    </div>
+    
+    </div>
   </div>
   
   <div class="layui-footer">
@@ -76,7 +143,10 @@
     © layui.com - 底部固定区域
   </div>
 </div>
-<script src="./lib/layui/layui.js"></script>
+<script src="../lib/layui/layui.js"></script>
+<script src="../lib/jquery-3.3.1.min.js"></script>
+<script src="../lib/common.js"></script>
+<script src="../javascripts/backstage.js"></script>
 <script>
 //JavaScript代码区域
 layui.use('element', function(){
@@ -84,5 +154,6 @@ layui.use('element', function(){
   
 });
 </script>
+
 </body>
 </html>
